--- a/404.html
+++ b/404.html
@@ -17,12 +17,12 @@
 
 <body>
 
-    <div class="x404">
+    <main class="x404">
         <div class="bg">
             <h1 class="number valign-text-middle josefinsans-bold-porsche-150px">404</h1>
             <div class="text-4 valign-text-middle josefinsans-bold-porsche-55px">Página no encontrada</div>
         </div>
-    </div>
+    </main>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
