--- a/signUpUser.html
+++ b/signUpUser.html
@@ -16,38 +16,37 @@
 </head>
 
 <body>
-    <div class="page-header">
-        <h1 class="sign-up-i887598144 josefinsans-normal-black-30px">Registrarme</h1>
-        <a href="logInUser.html" class="login-i8875981442 josefinsans-normal-chetwode-blue-16px">Ingresar</a>
-    </div>
 
-    <div class="sign-up-form">
-        <div class="dropdown-indicator">
-            <div class="">
-                <input type="name" class="vegetables-i887601 josefinsans-normal-chetwode-blue-16px border-2px-chetwode-blue overlap-group"
+    <header class="log-in d-flex align-items-center justify-content-center">
+        <h1 class="josefinsans-normal-black-30px">Registrarme</h1>
+        <a href="signUpUser.html" class="registrarme josefinsans-normal-chetwode-blue-16px">Ingresar</a>
+    </header>
+
+    <main>
+        <form action="" method="" class="group-form" id="adoption-form">
+            <ul class="d-flex align-content-center flex-column align-items-center justify-content-center">
+                <li>
+                    <input type="name"
+                    class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
                     placeholder="Nombre">
-            </div>
-        </div>
-
-        <div class="dropdown-indicator">
-            <div class="">
-                <input type="email" class="vegetables-i887602 josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
-                    placeholder="Correo">
-            </div>
-        </div>
-
-        <div class="dropdown-indicator">
-            <div class="">
-                <input type="password" class="vegetables-i887603 josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
-                    placeholder="Contraseña">
-            </div>
-        </div>
-
-        <div class="">
-            <button class="sign-up-i887599144 josefinsans-normal-white-20px button-primary">Registrarme
-            </button>
-        </div>
-    </div>
+                    <br>
+                    <input type="email"
+                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
+                        placeholder="Correo">
+                    <br>
+                    <input type="new-password"
+                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
+                        placeholder="Contraseña">
+                    <br>
+                    <input type="new-password"
+                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
+                        placeholder="Confirmar contraseña">
+                </li>
+                <br>
+                <input type="submit" value="Ingresar" class="button-p josefinsans-normal-white-20px button-primary">
+            </ul>
+        </form>
+    </main>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
