--- a/adoptionForm.html
+++ b/adoptionForm.html
@@ -17,6 +17,217 @@
 
 <body>
 
+    <header>
+        <div class="logo">
+            <a href="index.html">
+                <img src="assets/svg/logo.svg" class="pawchontli-icon" alt="">
+            </a>
+        </div>
+        <div class="nav-bar">
+            <a href="favouritePet.html">
+                <img src="assets/svg/heart.svg" class="heart" alt="">
+            </a>
+            <img src="assets/svg/menu.svg" class="menu" alt="">
+        </div>
+    </header>
+
+    <main class="adoption-form">
+        <div class="top-background">
+            <div class="background-orange"></div>
+            <div class="rectangle-background"></div>
+            <div class="close">
+                <img onclick="goBack()" src="assets/svg/xcircle.svg" class="x-circle" alt="">
+            </div>
+        </div>
+
+        <div class="title">
+            <h1 class="josefinsans-normal-black-30px">Formulario de <br />adopción</h1>
+        </div>
+
+        <form action="" method="" class="group-form" id="adoption-form">
+            <ul class="d-flex align-content-center flex-column align-items-center justify-content-center">
+                <li>
+                    <label for="inputText"
+                        class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Actualmente tienes
+                        animales?
+                    </label>
+                    <input type="text"
+                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue">
+                </li>
+                <br>
+                <li>
+                    <label for="inputText2"
+                        class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Cuáles?
+                    </label>
+                    <input type="text"
+                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue">
+                </li>
+                <br>
+                <li>
+                    <label for="inputText3"
+                        class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Anteriormente has
+                        tenido otros animales?
+                    </label>
+                    <input type="text"
+                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue">
+                </li>
+                <br>
+                <li>
+                    <label for="inputText4"
+                        class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Qué fue lo que
+                        pasó con ellos?
+                    </label>
+                    <input type="text"
+                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue">
+                </li>
+                <br>
+                <li>
+                    <label for="inputText5"
+                        class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Todas las personas
+                        en
+                        casa están de acuerdo en adoptar?
+                    </label>
+                    <input type="text"
+                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue">
+                </li>
+                <br>
+                <li>
+                    <label for="inputText6" class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">Si
+                        por algún motivo
+                        tuvieras que cambiar de domicilio, ¿qué pasaría con el adoptado?
+                    </label>
+                    <input type="text"
+                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue">
+                </li>
+                <br>
+                <li>
+                    <label for="inputText7"
+                        class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Cuántos años crees
+                        que
+                        vive un perro o gato en promedio?
+                    </label>
+                    <input type="text"
+                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue">
+                </li>
+                <br>
+                <li>
+                    <label for="inputText8"
+                        class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Dónde dormirá el
+                        adoptado?
+                    </label>
+                    <input type="text"
+                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue">
+                </li>
+                <br>
+                <li>
+                    <label for="inputText9"
+                        class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Cuánto tiempo
+                        pasará
+                        solo?
+                    </label>
+                    <input type="text"
+                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue">
+                </li>
+                <br>
+                <li>
+                    <label for="inputText10"
+                        class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">En caso de tener
+                        empleados domésticos, ¿ellos están al tanto de los cuidados de un animal?
+                    </label>
+                    <input type="text"
+                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue">
+                </li>
+                <br>
+                <li>
+                    <label for="inputText11"
+                        class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Quién será el
+                        responsable y se hará cargo de cubrir los gastos del adoptado?
+                    </label>
+                    <input type="text"
+                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue">
+                </li>
+                <br>
+                <li>
+                    <label for="inputText12"
+                        class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Tienes un médico
+                        veterinario de cabecera?
+                    </label>
+                    <input type="text"
+                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue">
+                </li>
+                <br>
+                <p class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap align-content-center">
+                    Es importante que estés consciente
+                    que los animales necesitan visitas
+                    periódicas al veterinario, vacunación,
+                    desparasitación, limpieza, uso de
+                    collar con placa de identificación,
+                    una correcta alimentación y espacio
+                    para poder vivir felices.
+                </p>
+                <li class="checkbox-form">
+                    <input type="checkbox" class="" id="checkbox-form">
+                    <label for="inputText12" class="josefinsans-normal-chetwode-blue-20px">De acuerdo.
+                    </label>
+                </li>
+                <input type="submit" value="Ingresar" class="button-p josefinsans-normal-white-20px button-primary">
+            </ul>
+        </form>
+    </main>
+    <footer text-center>
+        <div class="top-footer">
+            <img onclick="topFunction()" id="myBtn" title="Go to top" src="assets/svg/arrow.svg" alt="" class="arrow">
+        </div>
+        <div class="container text-center">
+            <img src="assets/svg/logowhite.svg" alt="" class="logo-white">
+        </div>
+        <div class="block-footer d-flex flex-column pb-4 align-content-start">
+            <ul>
+                <li>
+                    <a href="">Acerca</a>
+                </li>
+                <li>
+                    <a href="">Refugios</a>
+                </li>
+                <li>
+                    <a href="">Condiciones de uso</a>
+                </li>
+                <li>
+                    <a href="">Política de privacidad</a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="">Partners</a>
+                </li>
+                <li>
+                    <a href="">Soporte</a>
+                </li>
+                <li>
+                    <a href="">Mapa del sitio</a>
+                </li>
+            </ul>
+        </div>
+
+        <div class="icons-footer d-flex justify-content-evenly">
+            <a href="" role="button">
+                <img src="/assets/svg/facebook.svg" alt="" style="height: 2.5em; width: 2.5em;">
+            </a>
+            <a href="" role="button">
+                <img src="/assets/svg/twitter.svg" alt="" style="height: 2.5em; width: 2.5em;">
+            </a>
+            <a href="" role="button">
+                <img src="/assets/svg/instagram.svg" alt="" style="height: 2.5em; width: 2.5em;">
+            </a>
+            <a href="">
+                <img src="/assets/svg/git.svg" alt="" style="height: 3em; width: 3em;">
+            </a>
+        </div>
+        <div class="text-center pb-4">
+            <p class="quicksand-normal-white-10px">© 2021 Todos los derechos reservados.</p>
+        </div>
+    </footer>
+
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
