--- a/signUpShelter.html
+++ b/signUpShelter.html
@@ -16,39 +16,37 @@
 </head>
 
 <body>
-    <div class="page-header">
-        <h1 class="sign-up-i57144232 josefinsans-normal-black-30px">Registrar mi <br />refugio</h1>
-        <a href="logInShelter.html" class="login-i571442324 josefinsans-normal-chetwode-blue-16px">Ingresar
-        </a>
-    </div>
 
-    <div class="sign-up-form">
-        <div class="dropdown-indicator">
-            <div class="">
-                <input type="name" class="vegetables-i486371 josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue" placeholder="Nombre del refugio">
-            </div>
-        </div>
+    <header class="log-in d-flex align-items-center justify-content-center">
+        <h1 class="josefinsans-normal-black-30px">Registrar mi </br> refugio</h1>
+        <a href="signUpUser.html" class="registrarme josefinsans-normal-chetwode-blue-16px">Ingresar</a>
+    </header>
 
-
-        <div class="dropdown-indicator">
-            <div class="">
-                <input type="email"
-                    class="vegetables-i486431 josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
-                    placeholder="Correo">
-            </div>
-        </div>
-
-        <div class="dropdown-indicator">
-            <div class="">
-                <input type="password"
-                    class="vegetables-i486481 josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
-                    placeholder="Contraseña">
-            </div>
-        </div>
-
-        <div class="">
-            <button class="sign-up-i51314421 josefinsans-normal-white-20px button-primary">Registrar</button></div>
-    </div>
+    <main>
+        <form action="" method="" class="group-form" id="adoption-form">
+            <ul class="d-flex align-content-center flex-column align-items-center justify-content-center">
+                <li>
+                    <input type="organization"
+                    class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
+                    placeholder="Nombre del refugio">
+                    <br>
+                    <input type="email"
+                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
+                        placeholder="Correo">
+                    <br>
+                    <input type="new-password"
+                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
+                        placeholder="Contraseña">
+                    <br>
+                    <input type="new-password"
+                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue"
+                        placeholder="Confirmar contraseña">
+                </li>
+                <br>
+                <input type="submit" value="Ingresar" class="button-p josefinsans-normal-white-20px button-primary">
+            </ul>
+        </form>
+    </main>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
