--- a/updatePet.html
+++ b/updatePet.html
@@ -12,15 +12,161 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Quicksand:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
-    <title>Pawchontli 🐶🐱</title>
+    <title>Pawchontli 🐶🐱 || Actualizar datos de una mascota</title>
 </head>
 
 <body>
     
-<div>
-    <h1>ola ke ase</h1>
-</div>
 
+    <header>
+        <div class="logo">
+            <a href="index.html">
+                <img src="assets/svg/logo.svg" class="pawchontli-icon" alt="">
+            </a>
+        </div>
+        <div class="nav-bar">
+            <a href="favouritePet.html">
+                <img src="assets/svg/heart.svg" class="heart" alt="">
+            </a>
+            <img src="assets/svg/menu.svg" class="menu" alt="">
+        </div>
+    </header>
+
+    <main class="create-pet-form">
+        <div class="top-background">
+            <div class="background-orange"></div>
+            <div class="rectangle-background"></div>
+            <div class="close">
+                <img onclick="goBack()" src="assets/svg/xcircle.svg" class="x-circle" alt="">
+            </div>
+        </div>
+
+        <div class="title">
+            <h1 class="josefinsans-normal-black-30px">Actualizar<br />mascota</h1>
+        </div>
+
+        <form action="" method="" class="group-form" id="create-pet">
+            <ul class="d-flex align-content-center flex-column align-items-center justify-content-center">
+                <li>
+                    <label for="inputText"
+                        class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Cómo se llama?
+                    </label>
+                    <input type="text"
+                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue">
+                </li>
+                <br>
+                <li>
+                    <label for="inputText2"
+                        class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Qué tipo de mascota es?
+                    </label>
+                    <input type="text"
+                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue">
+                </li>
+                <br>
+                <li>
+                    <label for="inputText3"
+                        class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Cuál es su edad aproximada?
+                    </label>
+                    <input type="text"
+                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue">
+                </li>
+                <br>
+                <li>
+                    <label for="inputText4"
+                        class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Cuál es su sexo?
+                    </label>
+                    <input type="text"
+                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue">
+                </li>
+                <br>
+                <li>
+                    <label for="inputText5"
+                        class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Cuál es su talla aproximada?
+                    </label>
+                    <input type="text"
+                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue">
+                </li>
+                <br>
+                <li>
+                    <label for="inputText6" class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">Cuéntanos sobre su carácter.
+                    </label>
+                    <input type="text"
+                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue">
+                </li>
+                <br>
+                <li>
+                    <label for="inputText7"
+                        class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">Cuéntanos un poco de su historia.
+                    </label>
+                    <input type="text"
+                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue">
+                </li>
+                <br>
+                <li>
+                    <label for="inputText8"
+                        class="form-label josefinsans-normal-chetwode-blue-20px d-flex flex-wrap">¿Requiere atención o cuidados especiales? ¿Cuáles?
+                    </label>
+                    <input type="text"
+                        class="input-base josefinsans-normal-chetwode-blue-16px overlap-group border-2px-chetwode-blue">
+                </li>
+                <br>
+                <input type="submit" value="Actualizar" class="button-p josefinsans-normal-white-20px button-primary">
+            </ul>
+        </form>
+    </main>
+    <footer text-center>
+        <div class="top-footer">
+            <img onclick="topFunction()" id="myBtn" title="Go to top" src="assets/svg/arrow.svg" alt="" class="arrow">
+        </div>
+        <div class="container text-center">
+            <img src="assets/svg/logowhite.svg" alt="" class="logo-white">
+        </div>
+        <div class="block-footer d-flex flex-column pb-4 align-content-start">
+            <ul>
+                <li>
+                    <a href="">Acerca</a>
+                </li>
+                <li>
+                    <a href="">Refugios</a>
+                </li>
+                <li>
+                    <a href="">Condiciones de uso</a>
+                </li>
+                <li>
+                    <a href="">Política de privacidad</a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="">Partners</a>
+                </li>
+                <li>
+                    <a href="">Soporte</a>
+                </li>
+                <li>
+                    <a href="">Mapa del sitio</a>
+                </li>
+            </ul>
+        </div>
+
+        <div class="icons-footer d-flex justify-content-evenly">
+            <a href="" role="button">
+                <img src="/assets/svg/facebook.svg" alt="" style="height: 2.5em; width: 2.5em;">
+            </a>
+            <a href="" role="button">
+                <img src="/assets/svg/twitter.svg" alt="" style="height: 2.5em; width: 2.5em;">
+            </a>
+            <a href="" role="button">
+                <img src="/assets/svg/instagram.svg" alt="" style="height: 2.5em; width: 2.5em;">
+            </a>
+            <a href="">
+                <img src="/assets/svg/git.svg" alt="" style="height: 3em; width: 3em;">
+            </a>
+        </div>
+        <div class="text-center pb-4">
+            <p class="quicksand-normal-white-10px">© 2021 Todos los derechos reservados.</p>
+        </div>
+    </footer>
     
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
