--- a/adoptionForm.html
+++ b/adoptionForm.html
@@ -23,12 +23,12 @@
                 <img src="assets/svg/logo.svg" class="pawchontli-icon" alt="">
             </a>
         </div>
-        <div class="nav-bar">
+        <nav class="nav-bar">
             <a href="favouritePet.html">
                 <img src="assets/svg/heart.svg" class="heart" alt="">
             </a>
             <img src="assets/svg/menu.svg" class="menu" alt="">
-        </div>
+        </nav>
     </header>
 
     <main class="adoption-form">
