--- a/searchPet.html
+++ b/searchPet.html
@@ -17,6 +17,247 @@
 
 <body>
 
+    <header>
+        <div class="logo">
+            <a href="index.html">
+                <img src="assets/svg/logo.svg" class="pawchontli-icon" alt="">
+            </a>
+        </div>
+        <nav class="nav-bar">
+            <a href="favouritePet.html">
+                <img src="assets/svg/heart.svg" class="heart" alt="">
+            </a>
+            <img src="assets/svg/menu.svg" class="menu" alt="">
+        </nav>
+    </header>
+
+    <main>
+        <div class="top">
+            <div class="background-orange">
+            </div>
+            <img src="assets/svg/location.svg" alt="" class="location">
+            <p class="josefinsans-normal-white-30px">Código postal</p>
+        </div>
+
+        <div class="search-pet d-flex flex-wrap pt-1">
+            <div class="card" style="width: 20rem;">
+                <svg class="ico" viewBox="0 0 24 24" style="width: 3em; height: 3em">
+                    <path
+                        d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5C2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5C22,12.27 18.6,15.36 13.45,20.03L12,21.35Z">
+                    </path>
+                </svg>
+                <img class="card-img-top" src="assets/img/perro_2.jpg" alt="Pet">
+                <div class="card-body">
+                    <p class="card-text josefinsans-semi-bold-chetwode-blue-16px">Apolo</p>
+                </div>
+            </div>
+
+            <div class="card" style="width: 20rem;">
+                <svg class="ico" viewBox="0 0 24 24" style="width: 3em; height: 3em">
+                    <path
+                        d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5C2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5C22,12.27 18.6,15.36 13.45,20.03L12,21.35Z">
+                    </path>
+                </svg>
+                <img class="card-img-top" src="assets/img/perro_6.jpg" alt="Pet">
+                <div class="card-body">
+                    <p class="card-text josefinsans-semi-bold-chetwode-blue-16px">Capitán</p>
+                </div>
+            </div>
+
+            <div class="card" style="width: 20rem;">
+                <svg class="ico" viewBox="0 0 24 24" style="width: 3em; height: 3em">
+                    <path
+                        d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5C2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5C22,12.27 18.6,15.36 13.45,20.03L12,21.35Z">
+                    </path>
+                </svg>
+                <img class="card-img-top" src="assets/img/gato_1.jpg" alt="Pet">
+                <div class="card-body">
+                    <p class="card-text josefinsans-semi-bold-chetwode-blue-16px">Jacinta</p>
+                </div>
+            </div>
+
+            <div class="card" style="width: 20rem;">
+                <svg class="ico" viewBox="0 0 24 24" style="width: 3em; height: 3em">
+                    <path
+                        d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5C2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5C22,12.27 18.6,15.36 13.45,20.03L12,21.35Z">
+                    </path>
+                </svg>
+                <img class="card-img-top" src="assets/img/gato_5.jpg" alt="Pet">
+                <div class="card-body">
+                    <p class="card-text josefinsans-semi-bold-chetwode-blue-16px">Lucy</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="search-pet d-flex flex-wrap pb-4">
+            <div class="card" style="width: 20rem;">
+                <svg class="ico" viewBox="0 0 24 24" style="width: 3em; height: 3em">
+                    <path
+                        d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5C2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5C22,12.27 18.6,15.36 13.45,20.03L12,21.35Z">
+                    </path>
+                </svg>
+                <img class="card-img-top" src="assets/img/perro_2.jpg" alt="Pet">
+                <div class="card-body">
+                    <p class="card-text josefinsans-semi-bold-chetwode-blue-16px">Apolo</p>
+                </div>
+            </div>
+
+            <div class="card" style="width: 20rem;">
+                <svg class="ico" viewBox="0 0 24 24" style="width: 3em; height: 3em">
+                    <path
+                        d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5C2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5C22,12.27 18.6,15.36 13.45,20.03L12,21.35Z">
+                    </path>
+                </svg>
+                <img class="card-img-top" src="assets/img/perro_6.jpg" alt="Pet">
+                <div class="card-body">
+                    <p class="card-text josefinsans-semi-bold-chetwode-blue-16px">Capitán</p>
+                </div>
+            </div>
+
+            <div class="card" style="width: 20rem;">
+                <svg class="ico" viewBox="0 0 24 24" style="width: 3em; height: 3em">
+                    <path
+                        d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5C2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5C22,12.27 18.6,15.36 13.45,20.03L12,21.35Z">
+                    </path>
+                </svg>
+                <img class="card-img-top" src="assets/img/gato_1.jpg" alt="Pet">
+                <div class="card-body">
+                    <p class="card-text josefinsans-semi-bold-chetwode-blue-16px">Jacinta</p>
+                </div>
+            </div>
+
+            <div class="card" style="width: 20rem;">
+                <svg class="ico" viewBox="0 0 24 24" style="width: 3em; height: 3em">
+                    <path
+                        d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5C2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5C22,12.27 18.6,15.36 13.45,20.03L12,21.35Z">
+                    </path>
+                </svg>
+                <img class="card-img-top" src="assets/img/gato_5.jpg" alt="Pet">
+                <div class="card-body">
+                    <p class="card-text josefinsans-semi-bold-chetwode-blue-16px">Lucy</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="publicity text-center container-fluid">
+            <h1 class="josefinsans-normal-white-30px">Anuncio</h1>
+            <div class="actions">
+                <p class="quicksand-regular-white-20px">
+                    Consequat velit qui adipisicing sunt do reprehenderit ad laborum tempor ullamco exercitation.
+                </p>
+                <a href="" class="d-flex justify-content-center">
+                    <button class="button-white josefinsans-normal-porsche-25px">
+                        Click me
+                    </button>
+                </a>
+            </div>
+        </div>
+
+        <div class="search-pet d-flex flex-wrap pt-4">
+            <div class="card" style="width: 20rem;">
+                <svg class="ico" viewBox="0 0 24 24" style="width: 3em; height: 3em">
+                    <path
+                        d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5C2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5C22,12.27 18.6,15.36 13.45,20.03L12,21.35Z">
+                    </path>
+                </svg>
+                <img class="card-img-top" src="assets/img/perro_2.jpg" alt="Pet">
+                <div class="card-body">
+                    <p class="card-text josefinsans-semi-bold-chetwode-blue-16px">Apolo</p>
+                </div>
+            </div>
+
+            <div class="card" style="width: 20rem;">
+                <svg class="ico" viewBox="0 0 24 24" style="width: 3em; height: 3em">
+                    <path
+                        d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5C2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5C22,12.27 18.6,15.36 13.45,20.03L12,21.35Z">
+                    </path>
+                </svg>
+                <img class="card-img-top" src="assets/img/perro_6.jpg" alt="Pet">
+                <div class="card-body">
+                    <p class="card-text josefinsans-semi-bold-chetwode-blue-16px">Capitán</p>
+                </div>
+            </div>
+
+            <div class="card" style="width: 20rem;">
+                <svg class="ico" viewBox="0 0 24 24" style="width: 3em; height: 3em">
+                    <path
+                        d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5C2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5C22,12.27 18.6,15.36 13.45,20.03L12,21.35Z">
+                    </path>
+                </svg>
+                <img class="card-img-top" src="assets/img/gato_1.jpg" alt="Pet">
+                <div class="card-body">
+                    <p class="card-text josefinsans-semi-bold-chetwode-blue-16px">Jacinta</p>
+                </div>
+            </div>
+
+            <div class="card" style="width: 20rem;">
+                <svg class="ico" viewBox="0 0 24 24" style="width: 3em; height: 3em">
+                    <path
+                        d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5C2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5C22,12.27 18.6,15.36 13.45,20.03L12,21.35Z">
+                    </path>
+                </svg>
+                <img class="card-img-top" src="assets/img/gato_5.jpg" alt="Pet">
+                <div class="card-body">
+                    <p class="card-text josefinsans-semi-bold-chetwode-blue-16px">Lucy</p>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <footer text-center>
+        <div class="top-footer">
+            <img onclick="topFunction()" id="myBtn" title="Go to top" src="assets/svg/arrow.svg" alt="" class="arrow">
+        </div>
+        <div class="container text-center">
+            <img src="assets/svg/logowhite.svg" alt="" class="logo-white">
+        </div>
+        <div class="block-footer d-flex flex-column pb-4 align-content-start">
+            <ul>
+                <li>
+                    <a href="">Acerca</a>
+                </li>
+                <li>
+                    <a href="">Refugios</a>
+                </li>
+                <li>
+                    <a href="">Condiciones de uso</a>
+                </li>
+                <li>
+                    <a href="">Política de privacidad</a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="">Partners</a>
+                </li>
+                <li>
+                    <a href="">Soporte</a>
+                </li>
+                <li>
+                    <a href="">Mapa del sitio</a>
+                </li>
+            </ul>
+        </div>
+
+        <div class="icons-footer d-flex justify-content-evenly">
+            <a href="" role="button">
+                <img src="/assets/svg/facebook.svg" alt="" style="height: 2.5em; width: 2.5em;">
+            </a>
+            <a href="" role="button">
+                <img src="/assets/svg/twitter.svg" alt="" style="height: 2.5em; width: 2.5em;">
+            </a>
+            <a href="" role="button">
+                <img src="/assets/svg/instagram.svg" alt="" style="height: 2.5em; width: 2.5em;">
+            </a>
+            <a href="">
+                <img src="/assets/svg/git.svg" alt="" style="height: 3em; width: 3em;">
+            </a>
+        </div>
+        <div class="text-center pb-4">
+            <p class="quicksand-normal-white-10px">© 2021 Todos los derechos reservados.</p>
+        </div>
+    </footer>
+
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
