--- a/searchPet.html
+++ b/searchPet.html
@@ -38,7 +38,29 @@
             <img src="assets/svg/location.svg" alt="" class="location">
             <p class="josefinsans-normal-white-30px">Código postal</p>
         </div>
-
+        <div class="filter-options">
+            <div class="d-flex flex-row align-items-center justify-content-center pb-4">
+                <a href="">
+                    <button class="button-filter josefinsans-normal-chetwode-blue-16px border-2px-chetwode-blue">
+                        <img src="assets/svg/filter.svg" alt="">
+                        Filtrar
+                    </button>
+                </a>
+                <a href="">
+                    <button class="button-filter josefinsans-normal-chetwode-blue-16px border-2px-chetwode-blue">Ordenar
+                        por</button>
+                </a>
+            </div>
+            <div class="d-flex flew-row justify-content-center align-items-center">
+                <div class="pet-tag">
+                    <p class="text-tag josefinsans-normal-white-16px">Cachorros</p>
+                    <img src="assets/svg/delete.svg" alt="" style="height: 1em; width: 1em;">
+                </div>
+                <a href="">
+                    <button class="delete-all">Borrar todos</button>
+                </a>
+            </div>
+        </div>
         <div class="search-pet d-flex flex-wrap pt-1">
             <div class="card" style="width: 20rem;">
                 <svg class="ico" viewBox="0 0 24 24" style="width: 3em; height: 3em">
@@ -201,6 +223,16 @@
                     <p class="card-text josefinsans-semi-bold-chetwode-blue-16px">Lucy</p>
                 </div>
             </div>
+        </div>
+        <div class="pagination d-flex justify-content-center pt-4">
+            <a href="#">&laquo;</a>
+            <a href="#" class="active">1</a>
+            <a href="#">2</a>
+            <a href="#">3</a>
+            <a href="#">4</a>
+            <a href="#">5</a>
+            <a href="#">6</a>
+            <a href="#">&raquo;</a>
         </div>
     </main>
 
